Work on cleaning up some TODOs such as removing legacy name loading support from modules